# JniDemo

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/zj/jnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/zj/jnidemo/: AudioTestActivity.kt  Camera1Activity.kt  Camera1Helper.kt  Camera2Helper.kt  CameraDeviceCallback.kt  HiExecutor.kt  MainActivity.java  PcmToWavUtil.java  Person.java
app/src/main/res/layout/: activity_audio_test.xml  activity_camera1.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/zj/jnidemo/: ExampleUnitTest.java
ffmpeg_lib/: build.gradle
ffmpeg_lib/src/androidTest/java/com/zj/ffmpeg_lib/: ExampleInstrumentedTest.java
ffmpeg_lib/src/main/: AndroidManifest.xml
ffmpeg_lib/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JNICallback.cpp  JNICallback.h  MediaPlayer.cpp  MediaPlayer.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h  util.h
ffmpeg_lib/src/main/java/com/zj/ffmpeg_lib/: MainActivity.java
ffmpeg_lib/src/main/java/com/zj/ffmpeg_lib/player/: CameraHelper.java  MediaPlayer.java
ffmpeg_lib/src/main/res/layout/: activity_main.xml
ffmpeg_lib/src/main/res/values/: strings.xml
ffmpeg_lib/src/test/java/com/zj/ffmpeg_lib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/src/androidTest/java/com/zj/opencv/: ExampleInstrumentedTest.kt
opencv/src/main/: AndroidManifest.xml
opencv/src/main/cpp/: CMakeLists.txt  FaceTracker.cpp  FaceTracker.h  native-lib.cpp
opencv/src/main/java/com/zj/opencv/: FaceTracker.kt  FaceTrackerActivity.kt  HiExecutor.kt  ImageProcess.kt  MainActivity.kt  Utils.kt
opencv/src/main/res/layout/: activity_face_tracker.xml  activity_main.xml
opencv/src/test/java/com/zj/opencv/: ExampleUnitTest.kt
opengl/: build.gradle
opengl/src/androidTest/java/com/zj/opengl/: ExampleInstrumentedTest.kt
opengl/src/main/: AndroidManifest.xml
opengl/src/main/java/com/zj/opengl/: CameraHelper.java  MainActivity.kt  MyGlRenderer.kt  MyGlSurfaceView.kt  MyMediaRecorder.kt  RecordButton.kt  ScreenFilter.kt
opengl/src/main/java/com/zj/opengl/filter/: BaseFilter.kt  CameraFilter.kt  ScreenFilter.kt
opengl/src/main/java/com/zj/opengl/record/: MyEGL.kt
opengl/src/main/java/com/zj/opengl/utils/: BufferHelper.kt  FilterHelper.kt
opengl/src/main/res/drawable/: btn_record_bg.xml  group_record_speed_bg.xml  radio_btn_speed_bg.xml
opengl/src/main/res/layout/: activity_main.xml
opengl/src/main/res/raw/: base_fragment.glsl  base_vertex.glsl  camera_fragment.glsl  camera_vertex.glsl
opengl/src/test/java/com/zj/opengl/: ExampleUnitTest.kt
push/: build.gradle
push/src/androidTest/java/com/zj/push/: ExampleInstrumentedTest.java
push/src/main/: AndroidManifest.xml
push/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h  util.h
push/src/main/cpp/librtmp/: CMakeLists.txt
push/src/main/java/com/zj/push/: AudioChannel.java  CameraHelper.java  HiExecutor.kt  MainActivity.java  PcmToWavUtil.java  Pusher.java  VideoChannel.java
push/src/main/res/layout/: activity_main.xml
push/src/test/java/com/zj/push/: ExampleUnitTest.java
